# axum_yew

./: .gitignore  Cargo.toml  Trunk.toml  index.html
docs/: axum_yew-a2057c8dcf743efd.js  axum_yew-a2057c8dcf743efd_bg.wasm  index.html
src/: api.rs  lib.rs  main.css  main.rs  router.rs
src/components/: mod.rs
src/components/pages/: eligible_case.rs  home.rs  insurer.rs  iro.rs  login.rs  mod.rs  patient.rs  provider.rs  register.rs
src/components/units/: button.rs  data_display.rs  date_input.rs  eligible_case_display.rs  eligible_case_form.rs  email_input.rs  insurer_display.rs  iro_display.rs  login_form.rs  logout.rs  main_title.rs  mod.rs  nav.rs  patient_display.rs  provider_display.rs  provider_form.rs  radio.rs  register_form.rs  simple_form.rs  tel_input.rs  text_input.rs
src/store/: auth_store.rs
