[package]
name = "axum_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
serde = "1.0.186"
serde_json = "1.0.105"
stylist = { version = "0.12.1", features = ["yew", "parser"] }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew-router = "0.17.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.37"
